--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   hello world!!
-  <img src="https://www.dropbox.com/sh/lrob8n4dc2iwqkn/AABEaK2Jz7cnmtaEP_1IG2V8a?dl=0/myface.png" height="150" width="400"/>
+  <img src="myface.png" height="150" width="400"/>
 </body>
 </html>
