--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 
 <html>
 <head>
-  <title>hoppfull</title>
-  <link rel="stylesheet" type="text/css" href="xss.css" />
-  <style type="text/css"></style>
+	<title>hoppfull</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+	<link rel="stylesheet" type="text/css" href="xss.css" />
+	<style type="text/css"></style>
 </head>
 <body>
-  hagha
-  <img src="myface.png" height="150" width="400"/>
+	Hello world wide internet!
 </body>
 </html>
