Test if Android
Added a test to see if page is viewed by android

--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
 </head>
 <body>
 	Hello world wide internet!
+	<script type="text/javascript">
+		if(/Android/i.test(navigator.userAgent)){
+			document.write("whaddup!");
+		}
+	</script>
 </body>
 </html>
