Test if any mobile device
Updated to test if user is on mobile device

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
 	Hello world wide internet!
 	<script type="text/javascript">
-		if(/Android/i.test(navigator.userAgent)){
-			document.write("whaddup!");
+		if(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)){
+			document.write("whaddup!"); //OMG it works!
 		}
 	</script>
 </body>
