--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 
 <html>
 <head>
-	<title>hoppfull</title>
+	<title>hoppfull</title><meta charset="UTF-8"/>
+	<link rel="stylesheet" href="css/index.css"/>
 </head>
 <body>
 	Hello worldzzch!
